--- a/styles/Menubar.css
+++ b/styles/Menubar.css
@@ -1,18 +1,44 @@
+/*For the rich text editor*/
+/* Basic editor styles */
+.ProseMirror {
+    padding: 10px;
+    background: white;
+    border-radius: 0 0 5px 5px;
+    height: 165px;
+    border: 0;
+    overflow-y: scroll;
+}
+
+.ProseMirror:focus {
+    margin: 0;
+    outline: 0;
+}
+
+.ProseMirror p.is-editor-empty:first-child::before {
+    color: #adb5bd;
+    content: attr(data-placeholder);
+    float: left;
+    height: 0;
+    pointer-events: none;
+}
+
+.editor ::-webkit-scrollbar {
+    display: none;
+}
+
+
+.editor ::-webkit-scrollbar-thumb {
+    display: none;
+}
+
+
 .ProseMirror>*+* {
     margin-top: 0.75em;
-    padding: 2rem;
 }
-.ProseMirror div p{
-    position: absolute;
-    max-width: 100%;
-    min-height: 100%;
-    height: 100%;
-    max-height: 100%;
-}
-.ProseMirror
+
 .ProseMirror ul,
 .ProseMirror ol {
-    padding: 0 1rem;
+    padding: 0 2rem;
 }
 
 .ProseMirror h1,
@@ -21,25 +47,23 @@
 .ProseMirror h4,
 .ProseMirror h5,
 .ProseMirror h6 {
-    line-height: 1.5;
+    line-height: 1.1;
 }
 
 .ProseMirror code {
-    background-color: rgba(97, 97, 97, 0.1);
+    background-color: rgba(#616161, 0.1);
     color: #616161;
 }
-.ProseMirror strong {
-    font-weight: 800;
-}
+
 .ProseMirror pre {
     background: #0d0d0d;
     color: #fff;
-    font-family: 'Inter', monospace;
+    font-family: "JetBrainsMono", monospace;
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
 }
 
-.ProseMirror pre code {
+.ProseMirror code {
     color: inherit;
     padding: 0;
     background: none;
@@ -52,13 +76,115 @@
 }
 
 .ProseMirror blockquote {
-    
     padding-left: 1rem;
-    border-left: 2px solid rgba(13, 13, 13, 0.1);
+    border-left: 3px solid #999999;
 }
 
 .ProseMirror hr {
     border: none;
-    border-top: 2px solid rgba(13, 13, 13, 0.1);
+    border-top: 3px solid #999999;
     margin: 2rem 0;
+}
+
+/* ............................ */
+.textEditor {
+    border-radius: 5px;
+    border: 1px solid grey;
+}
+
+.menuBar {
+    padding-bottom: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menuBar button {
+    font-size: 18px;
+    margin: 7px;
+    margin-right: 15px;
+    outline: none;
+    border: none;
+    background: none;
+    color: rgb(70, 70, 70);
+    cursor: pointer;
+}
+
+.menuBar button:last-child {
+    margin-right: 7px;
+}
+
+.heading3 {
+    font-size: 15px;
+}
+
+button.is_active {
+    background: rgb(197, 197, 197);
+    padding: 2px 3px;
+    border-radius: 2px;
+}
+
+.text-editor {
+    padding: 10px;
+}
+
+.menubar {
+    background-color: #f4f4f4;
+    border-radius: 5px;
+    padding: 8px;
+}
+
+.menu-bar button {
+    font-size: 14px;
+    padding: 7px;
+    margin-right: 15px;
+    outline: none;
+    border: none;
+    background: none;
+    color: rgb(70, 70, 70);
+    cursor: pointer;
+}
+
+.menu-bar button:hover {
+    background-color: #f4f4f4;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.emojis {
+    right: 0;
+    top: 10%;
+    position: absolute;
+    z-index: 100;
+}
+
+.Checkbox {
+    border-radius: 10px;
+    color: #3F52E1;
+}
+
+
+.tabs {
+    display: flex;
+    width: 100%;
+    margin: 0;
+    cursor: pointer;
+}
+
+.tabs li {
+    display: flex;
+    height: 4px;
+    width: 100%;
+    background: #c5c5c5;
+    border-radius: 6px;
+    margin-block: 10px;
+}
+
+.tabs li.active {
+    background: #5866E3;
+}
+
+.tabs .inner-text:active {
+    color: #000;
+    font-weight: bolder;
 }
